--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -32,7 +32,7 @@
         <p>
           <img
             src="img/2959326615_af04f9878a_z.jpg"
-            alt="An image of the cutest puppy I found online"
+            alt="the cutest puppy I found online"
           />
         </p>
         <p>
@@ -49,7 +49,7 @@
 
       <section>
         <form>
-          <h3>Leave a comment</h3>
+          <h2>Leave a comment</h2>
           <div>
             <label for="email_input">Email:</label>
             <input
@@ -59,7 +59,7 @@
               name="email"
             />
             <label for="password_input">Password:</label>
-            <input id="password_input" type="password" name="password" />
+            <input type="password" id="password_input" name="password" />
           </div>
           <div>
             <label for="form-control">Comment:</label>
@@ -79,8 +79,8 @@
     <footer>
       <p>This journal was created by me using my own two hands.</p>
       <address>
-        Contact me at <a href="me@here.com">me@here.com</a> , or at
-        <a href="tel:555-123-4567">555-123-4567</a>.
+        Contact me at <a href="mailto:me@here.com">me@here.com</a> , or at
+        <a href="tel:555-123-4567">(555) 123-4567</a>.
       </address>
       <p>&copy; 2019 The Author.</p>
     </footer>
