--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-      <secion>
+      <section>
         <header>
           <h2>The Cutest Puppy!</h2>
           <p class="time-posted">
@@ -42,10 +42,10 @@
             <a
               href="https://www.flickr.com/photos/statelibraryofnsw/2959326615/"
               >State Library of NSW</a
-            ></cite
-          >.
+            >
+          </cite>
         </p>
-      </secion>
+      </section>
 
       <section>
         <form>
@@ -53,7 +53,7 @@
           <div>
             <label for="email_input">Email:</label>
             <input
-              labelid="email_input"
+              id="email_input"
               placeholder="email@domain.com"
               type="email"
               name="email"
@@ -62,7 +62,7 @@
             <input type="password" id="password_input" name="password" />
           </div>
           <div>
-            <label for="form-control">Comment:</label>
+            <label for="comment_field">Comment:</label>
             <textarea
               class="form-control"
               id="comment_field"
