final version problem-3

--- a/problem-c/index.html
+++ b/problem-c/index.html
@@ -1,15 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">  
+  <head>
+    <meta charset="UTF-8" />
     <title>Top 5 List</title>
-    
+
     <!-- include required fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Top 5 Songs For Celia!</h1>
+    </header>
 
+    <table>
+      <thead>
+        <tr>
+          <th scope="col">Rank</th>
+          <th scope="col">Artist</th>
+          <th scope="col">Title</th>
+          <th scope="col">Album</th>
+        </tr>
+      </thead>
 
-</body>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>BLACKPINK</td>
+          <td>DDu-Du DDu-Du</td>
+          <td>
+            <a
+              href="https://open.spotify.com/track/4jUEHIrc443f743JbyLN0y?si=16JVnoahTu61oMVtD7jldA"
+              target="_blank"
+              ><img src="Img/square_up.jpg" alt="Square Up Album"
+            /></a>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>BLACKPINK</td>
+          <td>Don't Know What to Do</td>
+          <td>
+            <a
+              href="https://open.spotify.com/track/0zYqFyhiTj419q56lNsjk0?si=_Kb5wq7dSt6Y20JS_KzyhQ"
+              target="_blank"
+              ><img src="Img/Kill_This_Love.webp" alt="Kill This Love Album"
+            /></a>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>BLACKPINK</td>
+          <td>Forever young</td>
+          <td>
+            <a
+              href="https://open.spotify.com/track/56bHclo7YNvpujMveLElQn?si=5wWARrmMQ9SRzUTPVMvfgg"
+              target="_blank"
+              ><img src="Img/square_up.jpg" alt="Square Up Album"
+            /></a>
+          </td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>BLACKPINK</td>
+          <td>Kill This Love</td>
+          <td>
+            <a
+              href="https://open.spotify.com/track/18PergoIrGmRyeYxnaXJN2?si=OZp0NVXLQKG3sB24ToHgEQ"
+              target="_blank"
+              ><img src="Img/Kill_This_Love.webp" alt="Kill This Love Album"
+            /></a>
+          </td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>BLACKPINK</td>
+          <td>Bombaya</td>
+          <td>
+            <a
+              href="https://open.spotify.com/track/3yHQKddM8SVCRnuPSo3HPN?si=WP2RBC5WQe6J5pK4PP3Lyw"
+              target="_blank"
+              ><img src="Img/Squre_one.jpg" alt="Square One Album"
+            /></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
