final version problem-d

--- a/problem-d/index.html
+++ b/problem-d/index.html
@@ -27,11 +27,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#"
-            ><span class="logo"> </span>Informatics<img
-              src="http://img/ischool-symbol-white.png"
-              alt="information school logo"
-          /></a>
+          <a href="#"><span class="logo"> </span>Informatics</a>
         </li>
         <li><a href="#courses">Courses</a></li>
         <li><a href="#admissions">Admissions</a></li>
@@ -39,8 +35,8 @@
       </ul>
       <div class="searchBox" role="search">
         <input type="text" placeholder="Search..." />
-        <button class="fa fa-universal-access" aria-hidden="true">
-          Search
+        <button>
+          <i class="fas fa-search fa-flip-horizontal" aria-label="search"></i>
         </button>
       </div>
     </nav>
